--- a/.github/workflows/_10_test_metrics.yml
+++ b/.github/workflows/_10_test_metrics.yml
@@ -11,9 +11,9 @@ jobs:
       METRICS_FILE_NAME: metrics.txt
     services:
       network-exporter:
-        image: ghcr.io/chainflip-io/chainflip-network-exporter:dev-${{ github.sha }}
+        image: ghcr.io/chainflip-io/chainflip-prometheus-exporter:dev-${{ github.sha }}
         env:
-          CF_NETWORK: sisyphos
+          CF_NETWORK: berghain
           NETWORK_EXPORTER_PORT: 9000
           CF_WATCHER_PORT: 9001
           DOT_WATCHER_PORT: 9002
@@ -21,9 +21,9 @@ jobs:
           BTC_WATCHER_PORT: 9004
           ETH_NETWORK_ID: 5
           ETH_WS_ENDPOINT: ${{ secrets.CF_NE_ETH_WS_ENDPOINT }}
-          CF_WS_ENDPOINT: wss://sisyphos.chainflip.xyz
-          DOT_WS_ENDPOINT: wss://sisydot.chainflip.xyz
-          BTC_HTTP_ENDPOINT: https://flip:flip@sisybtc.chainflip.xyz
+          CF_WS_ENDPOINT: wss://berghain-rpc.chainflip.io
+          DOT_WS_ENDPOINT: wss://rpc.polkadot.io
+          BTC_HTTP_ENDPOINT: https://flip:${{ secrets.CF_BTC_RPC_PASSWORD }}@btc-mainnet-rpc.chainflip.io
         credentials:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
