chore: remove chart and add berghain default conf

--- a/.github/workflows/_01_docker.yml
+++ b/.github/workflows/_01_docker.yml
@@ -31,6 +31,7 @@ jobs:
           flavor: |
             latest=true
           tags: |
+            type=semver,pattern={{version}}
             type=sha,format=long,prefix=${{ inputs.prefix }}
 
       - name: Login to GitHub Container Registry ➡️🐳
