--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "*.*.*"
 jobs:
   pre-check:
     uses: ./.github/workflows/_00_pre_check.yml
