--- a/.github/workflows/_01_docker.yml
+++ b/.github/workflows/_01_docker.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CF_PROMETHEUS_EXPORTER_GITHUB_TOKEN }}
 
       - name: Build and push 🏗 🐳 ⬆️
         uses: docker/build-push-action@v3
