fix: expose secrets to the workflow 🐛

--- a/.github/workflows/_01_docker.yml
+++ b/.github/workflows/_01_docker.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: chainflip-bot
           password: ${{ secrets.CF_PROMETHEUS_EXPORTER_GITHUB_TOKEN }}
 
       - name: Build and push 🏗 🐳 ⬆️
