chore: use bot token for docker auth 🔮 (#13)
* chore: use bot token for docker auth 🔮

* fix: expose secrets to the workflow 🐛

--- a/.github/workflows/_10_test_metrics.yml
+++ b/.github/workflows/_10_test_metrics.yml
@@ -25,8 +25,8 @@ jobs:
           DOT_WS_ENDPOINT: wss://rpc.polkadot.io
           BTC_HTTP_ENDPOINT: https://flip:${{ secrets.CF_BTC_RPC_PASSWORD }}@btc-mainnet-rpc.chainflip.io
         credentials:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: chainflip-bot
+          password: ${{ secrets.CF_PROMETHEUS_EXPORTER_GITHUB_TOKEN }}
         ports:
           - "9000:9000"
     steps:
