--- a/.github/workflows/_01_docker.yml
+++ b/.github/workflows/_01_docker.yml
@@ -38,8 +38,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: chainflip-bot
-          password: ${{ secrets.CF_PROMETHEUS_EXPORTER_GITHUB_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push 🏗 🐳 ⬆️
         uses: docker/build-push-action@v3
