--- a/.github/workflows/_01_docker.yml
+++ b/.github/workflows/_01_docker.yml
@@ -8,6 +8,9 @@ on:
       prefix:
         type: string
         default: ""
+      push_docker_image:
+        type: boolean
+        default: true
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -35,7 +38,8 @@ jobs:
             type=sha,format=long,prefix=${{ inputs.prefix }}
 
       - name: Login to GitHub Container Registry ➡️🐳
-        uses: docker/login-action@v2
+        if: inputs.push_docker_image == true
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -45,9 +49,22 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          push: true
+          push: ${{ inputs.push_docker_image }}
           pull: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Save image 📦
+        if: inputs.push_docker_image == false
+        run: |
+          mkdir -p docker-images
+          docker save ghcr.io/${{ github.repository }}:${{ steps.meta.outputs.version }} -o docker-images/chainflip-prometheus-exporter.tar
+
+      - name: Upload image 📤
+        if: inputs.push_docker_image == false
+        uses: actions/upload-artifact@v3
+        with:
+          name: chainflip-prometheus-exporter-docker-image
+          path: docker-images
