--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "metrics": "curl localhost:9000/metrics",
     "dev": "tsx watch src/app.ts",
-    "start:dev:local": "CF_NETWORK=local pnpm dev",
+    "start:dev:local": "CF_NETWORK=localnet pnpm dev",
     "start:dev:berghain": "CF_NETWORK=berghain pnpm dev",
     "schema": "pnpm ts-json-schema-generator --path './src/config/interfaces/index.ts' --id 'ConfigSchema' --tsconfig './tsconfig.json' --out './config/schema.json' ",
     "validate": "pnpm tsc --project tsconfig.validation.json && node ./dist/validation.js"
