--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node dist/app.js",
     "build": "tsc",
     "lint": "eslint ./src*",
+    "prettier": "pnpm exec prettier --write src/**/*.ts src/*.ts src/**/**/*.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "metrics": "curl localhost:9000/metrics",
     "dev": "tsx watch src/app.ts",
