--- a/prometheus/config.yaml
+++ b/prometheus/config.yaml
@@ -2,9 +2,12 @@ global:
   scrape_interval: 5s
   scrape_timeout: 4s
 
+rule_files:
+  - /etc/prometheus/alerts.yaml
+
 scrape_configs:
-  - job_name: exporter
+  - job_name: chainflip-prometheus-exporter
     metrics_path: /metrics
     static_configs:
       - targets:
-          - "network-exporter:9000"
+          - "host.docker.internal:9000"
