--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "metrics": "curl localhost:9000/metrics",
     "dev": "tsx watch src/app.ts",
     "start:dev:local": "CF_NETWORK=localnet pnpm dev",
+    "start:dev:backspin": "CF_NETWORK=backspin pnpm dev",
+    "start:dev:sisyphos": "CF_NETWORK=sisyphos pnpm dev",
     "start:dev:berghain": "CF_NETWORK=berghain pnpm dev",
     "start:dev:perseverance": "CF_NETWORK=perseverance pnpm dev",
     "schema": "pnpm ts-json-schema-generator --path './src/config/interfaces/index.ts' --id 'ConfigSchema' --tsconfig './tsconfig.json' --out './config/schema.json' ",
