--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   "homepage": "https://github.com/chainflip-io/chainflip-eth-exporter#readme",
   "dependencies": {
     "@moralisweb3/common-evm-utils": "^2.13.0",
+    "@polkadot/types": "^10.12.4",
     "@polkadot/api": "^9.13.6",
     "@polkadot/util-crypto": "^12.3.2",
+    "@polkadot/util": "^12.6.2",
     "@types/node": "^18.16.3",
     "alchemy-sdk": "^2.4.2",
     "axios": "^1.4.0",
