add config validation on start-up

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "config/schema.json"],
   "exclude": ["node_modules"]
 }
