--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "src/app.ts",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node dist/src/app.js",
     "build": "tsc",
     "lint": "eslint ./src*",
     "prettier": "pnpm exec prettier --write src/**/*.ts src/*.ts src/**/**/*.ts",
