--- a/package.json
+++ b/package.json
@@ -35,14 +35,16 @@
   "homepage": "https://github.com/chainflip-io/chainflip-eth-exporter#readme",
   "dependencies": {
     "@moralisweb3/common-evm-utils": "^2.13.0",
-    "@polkadot/types": "^10.12.4",
     "@polkadot/api": "^9.13.6",
-    "@polkadot/util-crypto": "^12.3.2",
+    "@polkadot/types": "^10.12.4",
     "@polkadot/util": "^12.6.2",
+    "@polkadot/util-crypto": "^12.3.2",
+    "@solana/web3.js": "^1.95.3",
     "@types/node": "^18.16.3",
     "alchemy-sdk": "^2.4.2",
     "axios": "^1.4.0",
     "bitcoin-core": "^4.1.0",
+    "bs58": "^6.0.0",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
