--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,6 @@ ETH_HTTP_ENDPOINT=""
 ETH_NETWORK_ID=""
 DOT_WS_ENDPOINT=""
 BTC_HTTP_ENDPOINT=""
-CACHE_ENDPOINT=""
-PROCESSOR_ENDPOINT=""
+CACHE_ENDPOINT="FOR INTERNAL USE ONLY"
 ARB_WS_ENDPOINT=""
+SOL_HTTP_ENDPOINT=""
