--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,6 @@ DOT_WS_ENDPOINT=""
 BTC_HTTP_ENDPOINT=""
 CACHE_ENDPOINT="FOR INTERNAL USE ONLY"
 ARB_WS_ENDPOINT=""
+ARB_HTTP_ENDPOINT=""
 SOL_HTTP_ENDPOINT=""
 SOL_WS_ENDPOINT=""
