--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/chainflip-io/chainflip-eth-exporter#readme",
   "dependencies": {
+    "@chainflip/sdk": "^1.7.0",
     "@moralisweb3/common-evm-utils": "^2.13.0",
     "@polkadot/api": "^14.3.1",
     "@polkadot/types": "^14.3.1",
